updated swagger fully
